Move the notebook inside the folder

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -9,10 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Do this or put the code/notebook directly in the same directory as 'splineop' \n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "# Imports\n",
     "from splineop import splineop as spop\n",
     "from scipy.interpolate import make_lsq_spline\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_obs = np.loadtxt(\"./example/example-signal.csv\",\n",
+    "y_obs = np.loadtxt(\"./example-signal.csv\",\n",
     "               delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
